--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+Brotli==1.1.0
+cffi==1.17.1
 contourpy==1.3.0
+cssselect2==0.7.0
 cycler==0.12.1
 fonttools==4.53.1
+html5lib==1.1
 Jinja2==3.1.2
 kiwisolver==1.4.7
 MarkupSafe==2.1.5
@@ -10,10 +14,17 @@ packaging==24.1
 pandas==2.0.1
 pillow==10.4.0
 psutil==5.9.0
+pycparser==2.22
+pydyf==0.11.0
 pyparsing==3.1.4
+pyphen==0.16.0
 python-dateutil==2.9.0.post0
 python-nmap==0.6.1
 pytz==2024.1
 scapy==2.4.5
 six==1.16.0
+tinycss2==1.3.0
 tzdata==2024.1
+weasyprint==62.3
+webencodings==0.5.1
+zopfli==0.2.3
