--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Brotli==1.1.0
 cffi==1.17.1
+colorama==0.4.6
 contourpy==1.3.0
 cssselect2==0.7.0
 cycler==0.12.1
@@ -24,6 +25,7 @@ pytz==2024.1
 scapy==2.4.5
 six==1.16.0
 tinycss2==1.3.0
+tqdm==4.66.5
 tzdata==2024.1
 weasyprint==62.3
 webencodings==0.5.1
